--- a/designer.css
+++ b/designer.css
@@ -62,3 +62,12 @@ div.VBDCreateIgnored {
     background-color: #FFEEEE;
     padding: 5px;
 }
+
+div#VBDSaveLoadDiv {
+    margin-left: 5px;
+    margin-top: 2em;
+    margin-right: 37%;
+    border: 1px solid #AAAAAA;
+    background-color: #F8F8F8;
+    padding: 5px;
+}
