--- a/designer.css
+++ b/designer.css
@@ -71,3 +71,43 @@ div#VBDSaveLoadDiv {
     background-color: #F8F8F8;
     padding: 5px;
 }
+
+div.VBDMessageDiv {
+    width: 95%;
+    margin: auto;
+    padding: 5px;
+    border: 1px solid #AAAAAA;
+    background-color: #F8F8F8;
+}
+
+div.VBDErrorMessageDiv {
+    width: 95%;
+    margin: auto;
+    padding: 5px;
+    border: 1px solid #BB9999;
+    background-color: #F8EEEE;
+}
+
+span.VBDErrorSpan {
+    font-weight: bold;
+    color: darkred;
+}
+
+div#VBDOutlineManager {
+    margin-top: 2em;
+    background-color: #F8F8F8;
+    border: 1px solid #AAAAAA;
+    padding: 5px;
+    width: 60%;
+}
+
+div.VBDSavedOutlineEntry {
+    background-color: #FFFFFF;
+    margin-bottom: 5px;
+    padding: 3px;
+    border: 1px solid #AAAAAA;
+}
+
+div.VBDSavedOutlineCommands {
+    margin-left: 3em;
+}
